--- a/app/src/main/res/layout/content_details.xml
+++ b/app/src/main/res/layout/content_details.xml
@@ -8,4 +8,9 @@
     tools:context=".DetailsActivity"
     tools:showIn="@layout/activity_details">
 
+    <TextView
+        android:layout_width="match_parent"
+        android:layout_height="match_parent"
+        android:id="@+id/wer"/>
+
 </androidx.constraintlayout.widget.ConstraintLayout>
