--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -1,11 +1,60 @@
 <?xml version="1.0" encoding="utf-8"?>
 <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
-    xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     android:orientation="vertical"
-    tools:context=".MainActivity">
+    tools:context=".Main2Activity">
+<!--
+    <androidx.appcompat.widget.Toolbar
+        android:id="@+id/toolbar_main"
+        android:layout_width="match_parent"
+        android:layout_height="?attr/actionBarSize"
+        android:background="?attr/colorPrimary">
+
+
+    <SearchView
+        android:id="@+id/searchView"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:iconifiedByDefault="false"
+        android:queryHint="Search"
+        android:layout_centerHorizontal="true" />
+
+
+
+        <ImageButton
+            android:id="@+id/review_button"
+
+            android:layout_width="42dp"
+            android:layout_height="42dp"
+            android:layout_marginRight="18dp"
+            android:background="@drawable/ic_review"
+
+            />
+
+        <ImageButton
+            android:id="@+id/share_button"
+            android:layout_width="42dp"
+            android:layout_height="42dp"
+            android:onClick="share"
+            android:focusable="true"
+            android:layout_marginRight="18dp"
+            android:background="@drawable/ic_sharethis"
+
+            />
+
+        <ImageButton
+            android:id="@+id/help_button"
+            android:layout_width="42dp"
+            android:layout_height="42dp"
+            android:focusable="true"
+            android:layout_marginRight="18dp"
+            android:background="@drawable/ic_question_mark_on_a_circular_black_background"
+
+            />
+
+</androidx.appcompat.widget.Toolbar>
 
     <TextView
         android:layout_width="wrap_content"
@@ -14,6 +63,7 @@
         android:text="Below ListView is populated from JSON Data"
         android:textColor="#000"
          />
+         -->
 
     <ListView
         android:layout_width="match_parent"
