--- a/app/src/main/res/layout/content_details.xml
+++ b/app/src/main/res/layout/content_details.xml
@@ -1,5 +1,5 @@
 <?xml version="1.0" encoding="utf-8"?>
-<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
+<androidx.core.widget.NestedScrollView xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
@@ -7,10 +7,40 @@
     app:layout_behavior="@string/appbar_scrolling_view_behavior"
     tools:context=".DetailsActivity"
     tools:showIn="@layout/activity_details">
+    <androidx.constraintlayout.widget.ConstraintLayout
 
-    <TextView
-        android:layout_width="match_parent"
-        android:layout_height="match_parent"
-        android:id="@+id/wer"/>
+    android:id="@+id/scrolView"
+    android:layout_width="match_parent"
+    android:layout_height="wrap_content">
 
-</androidx.constraintlayout.widget.ConstraintLayout>
+        <ImageView
+            android:id="@+id/imagePreview"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+
+        app:layout_constraintTop_toTopOf="parent"
+        app:layout_constraintBottom_toTopOf="@+id/txtSenha"
+        app:layout_constraintVertical_chainStyle="packed" />
+
+        <TextView
+            android:id="@+id/txtSenha"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+
+        app:layout_constraintTop_toBottomOf="@+id/imagePreview"
+        app:layout_constraintBottom_toTopOf="@+id/wer"/>
+
+        <TextView
+            android:id="@+id/wer"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+
+        app:layout_constraintTop_toBottomOf="@+id/txtSenha"
+        app:layout_constraintBottom_toBottomOf="parent"/>
+
+
+
+    </androidx.constraintlayout.widget.ConstraintLayout>
+</androidx.core.widget.NestedScrollView>
+
+
