--- a/app/src/main/res/layout/lv_player.xml
+++ b/app/src/main/res/layout/lv_player.xml
@@ -2,7 +2,30 @@
 <LinearLayout
     xmlns:android="http://schemas.android.com/apk/res/android"
     android:layout_width="match_parent"
-    android:layout_height="match_parent">
+    android:layout_height="match_parent"
+    android:orientation="horizontal">
+<!--.
+    <LinearLayout
+        android:id="@+id/linearAdd"
+        android:layout_width="match_parent"
+        android:layout_height="match_parent"
+        android:orientation="vertical">
+
+        <com.google.android.gms.ads.AdView
+            xmlns:ads="http://schemas.android.com/apk/res-auto"
+            android:id="@+id/adView"
+            android:layout_width="match_parent"
+
+            android:layout_height="wrap_content"
+            android:layout_centerHorizontal="true"
+            android:layout_alignParentBottom="true"
+            ads:adSize="SMART_BANNER"
+            ads:adUnitId="ca-app-pub-3940256099942544/6300978111">
+        </com.google.android.gms.ads.AdView>
+
+
+    </LinearLayout>
+-->
 
     <ImageView
         android:layout_width="100dp"
@@ -39,8 +62,10 @@
             android:id="@+id/city"
             android:text="ddd"/>
 
-    </LinearLayout>
 
+
+
+    </LinearLayout>
 
 
 </LinearLayout>
