--- a/app/src/main/res/layout/activity_details.xml
+++ b/app/src/main/res/layout/activity_details.xml
@@ -4,7 +4,8 @@
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     xmlns:app="http://schemas.android.com/apk/res-auto"
-    tools:context=".DetailsActivity">
+    tools:context=".DetailsActivity"
+    android:background="@android:color/black">
 
     <com.google.android.material.appbar.AppBarLayout
         android:layout_width="match_parent"
