--- a/app/src/main/res/layout/content_details.xml
+++ b/app/src/main/res/layout/content_details.xml
@@ -7,12 +7,14 @@
     app:layout_behavior="@string/appbar_scrolling_view_behavior"
     tools:context=".DetailsActivity"
     tools:showIn="@layout/activity_details"
-    android:layout_marginTop="56dp">
+    android:layout_marginTop="56dp"
+    >
     <androidx.constraintlayout.widget.ConstraintLayout
 
     android:id="@+id/scrolView"
     android:layout_width="match_parent"
-    android:layout_height="wrap_content">
+    android:layout_height="wrap_content"
+    >
 
         <ImageView
             android:id="@+id/imagePreview"
@@ -27,7 +29,7 @@
             android:id="@+id/txtSenha"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
-
+            android:textColor="@android:color/white"
         app:layout_constraintTop_toBottomOf="@+id/imagePreview"
         app:layout_constraintBottom_toTopOf="@+id/wer"/>
 
@@ -35,7 +37,7 @@
             android:id="@+id/wer"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
-
+android:textColor="@android:color/white"
         app:layout_constraintTop_toBottomOf="@+id/txtSenha"
         app:layout_constraintBottom_toBottomOf="parent"/>
 
