--- a/app/src/main/res/layout/lv_player.xml
+++ b/app/src/main/res/layout/lv_player.xml
@@ -65,7 +65,8 @@
             android:layout_width="wrap_content"
             android:layout_height="0dp"
             android:layout_weight="1"
-
+            android:requiresFadingEdge="horizontal"
+            android:fadingEdgeLength="150dp"
             android:id="@+id/city"
             android:textColor="@android:color/white"
             />
