--- a/app/src/main/res/layout/content_details.xml
+++ b/app/src/main/res/layout/content_details.xml
@@ -20,10 +20,12 @@
         <ImageView
             android:id="@+id/imagePreview"
             android:layout_width="match_parent"
-            android:layout_height="wrap_content"
+            android:layout_height="60dp"
             android:layout_marginTop="56dp"
+
             app:layout_constraintTop_toTopOf="parent"
             app:layout_constraintBottom_toTopOf="@+id/txtSenha"
+            android:background="@drawable/ic_star"
             app:layout_constraintVertical_chainStyle="packed" />
 
         <TextView
