--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -11,10 +11,7 @@
     android:layout_height="match_parent"
     xmlns:tools="http://schemas.android.com/tools"
     tools:context=".Main2Activity"
-    android:background="#060101"
-
-    >
-
+    android:background="#060101">
 
     <ListView
         android:layout_width="match_parent"
@@ -34,9 +31,7 @@
         android:layout_height="wrap_content"
         android:layout_alignParentBottom="true"
         android:layout_alignBottom="@+id/lv"
-
         ads:adSize="SMART_BANNER"
-
         ads:adUnitId="ca-app-pub-3940256099942544/6300978111">
     </com.google.android.gms.ads.AdView>
 
