--- a/app/src/main/res/layout/content_details.xml
+++ b/app/src/main/res/layout/content_details.xml
@@ -7,11 +7,9 @@
     app:layout_behavior="@string/appbar_scrolling_view_behavior"
     tools:context=".DetailsActivity"
     android:layout_marginTop="0dp"
-    tools:showIn="@layout/activity_details"
+    tools:showIn="@layout/activity_details">
 
-    >
-    <androidx.constraintlayout.widget.ConstraintLayout
-
+    <RelativeLayout
     android:id="@+id/scrolView"
     android:layout_width="match_parent"
     android:layout_height="wrap_content"
@@ -21,7 +19,6 @@
             android:id="@+id/imagePreview"
             android:layout_width="match_parent"
             android:layout_height="150dp"
-            android:layout_marginTop="56dp"
 
             app:layout_constraintTop_toTopOf="parent"
             app:layout_constraintBottom_toTopOf="@+id/txtSenha"
@@ -33,16 +30,15 @@
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:textColor="@android:color/white"
-        app:layout_constraintTop_toBottomOf="@+id/imagePreview"
-        app:layout_constraintBottom_toTopOf="@+id/wer"/>
+            android:layout_below="@+id/imagePreview" />
 
         <TextView
             android:id="@+id/wer"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
-        android:textColor="@android:color/white"
-        app:layout_constraintTop_toBottomOf="@+id/txtSenha"
-        app:layout_constraintBottom_toBottomOf="parent"/>
+            android:textColor="@android:color/white"
+            android:layout_below="@+id/txtSenha"
+            app:layout_constraintBottom_toBottomOf="parent"/>
 
 <!--
         <com.google.android.material.appbar.AppBarLayout
@@ -66,7 +62,10 @@
         </com.google.android.material.appbar.AppBarLayout>
 -->
 
-    </androidx.constraintlayout.widget.ConstraintLayout>
+
+
+
+    </RelativeLayout>
 
 
 
